Put into docs more information about cards
