# Handlers/CardsHandler.go
@@ -26,6 +26,13 @@ type requestForUpdateCard struct {
 	URLPicture string // TODO: Pictures system
 }
 
+// @Summary		Show all cards
+// @Description Show all cards in database and show their data
+// @Tags		Cards
+// @Produce		json
+// @Success		200 {object} []Structs.Cards
+// @Failure		500 {object} Structs.ApiError
+// @Router		/Card [get]
 func (h *CardsHandler) FindAllCards(c *gin.Context) {
 	cards, err := h.CardsRepo.FindAllCards(c)
 	if err != nil {
@@ -35,6 +42,16 @@ func (h *CardsHandler) FindAllCards(c *gin.Context) {
 	c.JSON(http.StatusOK, cards)
 }
 
+// @Summary		Find card by ID
+// @Description Find card from DataBase by ID
+// @Tags		Cards
+// @Param		id path int true "Card ID"
+// @Produce		json
+// @Success		200 {object} Structs.Cards
+// @Failure		500 {object} Structs.ApiError
+// @Failure		400 {object} Structs.ApiError
+// @Failure		404 {object} Structs.ApiError
+// @Router		/Card/{id} [get]
 func (h *CardsHandler) FindThisCard(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
@@ -53,6 +70,15 @@ func (h *CardsHandler) FindThisCard(c *gin.Context) {
 	c.JSON(http.StatusOK, card)
 }
 
+// @Summary		Create a card
+// @Description Create new card and put its to database
+// @Tags		Cards
+// @Accept		json
+// @Produce		json
+// @Success		200 {object} int "ID new card"
+// @Failure		400 {object} Structs.ApiError
+// @Failure		500 {object} Structs.ApiError
+// @Router		/Card [post]
 func (h *CardsHandler) CreateCard(c *gin.Context) {
 	var request requestForCreateCard
 	err := c.BindJSON(&request)
@@ -69,6 +95,16 @@ func (h *CardsHandler) CreateCard(c *gin.Context) {
 	c.JSON(http.StatusOK, id)
 }
 
+// @Summary		Update existing card
+// @Description Update existing card and put it to database
+// @Tags		Cards
+// @Param		id path int true "Card ID"
+// @Accept		json
+// @Produce		json
+// @Success		200
+// @Failure		400 {object} Structs.ApiError
+// @Failure		500 {object} Structs.ApiError
+// @Router		/Card/{id} [put]
 func (h *CardsHandler) UpdateCard(c *gin.Context) {
 	var request requestForUpdateCard
 	err := c.BindJSON(&request)
@@ -95,6 +131,16 @@ func (h *CardsHandler) UpdateCard(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
+// @Summary		Delete a card
+// @Description Delete existing card from database
+// @Tags		Cards
+// @Param		id path int true "Card ID"
+// @Accept		json
+// @Produce		json
+// @Success		200
+// @Failure		400 {object} Structs.ApiError
+// @Failure		500 {object} Structs.ApiError
+// @Router		/Card/{id} [delete]
 func (h *CardsHandler) DeleteCards(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
